Fix inconsistent spacing of social links

--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -87,6 +87,10 @@ body > header {
       padding: 0;
     }
 
+    ul.social-links > li {
+      width: 50px;
+    }
+
     li {
       display: inline-block;
       list-style: none;
